[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/generic/explosion_emitter/ExplosionEmitter.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemies/crystallite/Crystallite.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemies/crystallite/bottom.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies/crystallite/top.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemies/crystallite/spike.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.5

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.48438, 36.214 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.23343
height = 5.74239

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1, 1 )

[sub_resource type="CircleShape2D" id=7]
radius = 8.08661

[sub_resource type="Animation" id=8]
length = 0.25
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Shell:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}

[node name="Crystallite" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 524288
script = ExtResource( 2 )
id = "crystallite"
direction = -1
speed = 15.0
visual_path = NodePath("Visual")

[node name="Dummy" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dummy"]
position = Vector2( 1, 5 )
shape = SubResource( 1 )

[node name="Visual" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 1, 5 )

[node name="Control" type="Control" parent="Visual"]
margin_left = -4.0
margin_top = 9.0
margin_right = 4.0
margin_bottom = 83.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spike" type="Area2D" parent="Visual/Control"]
position = Vector2( 4, -59 )
collision_layer = 8
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Visual/Control/Spike"]
position = Vector2( 0, 24.7366 )
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visual/Control/Spike"]
visible = false
position = Vector2( 0, 23.4285 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="Visual/Control/Spike"]

[node name="SpikeOrigin" type="Position2D" parent="Visual/Control"]
position = Vector2( 4, -59 )

[node name="SpikeDestination" type="Position2D" parent="Visual/Control"]
position = Vector2( 4, 13.377 )

[node name="Body" type="AnimatedSprite" parent="Visual"]
modulate = Color( 0.890196, 0.890196, 0.890196, 1 )
position = Vector2( 0, 2.86915 )
frames = SubResource( 3 )

[node name="Shell" type="AnimatedSprite" parent="Visual"]
modulate = Color( 0.890196, 0.890196, 0.890196, 1 )
use_parent_material = true
position = Vector2( 0, 1.86915 )
frames = SubResource( 4 )
offset = Vector2( 0, 0.672911 )

[node name="SamusRaycast" type="RayCast2D" parent="Visual"]
position = Vector2( 0, 5.89319 )
enabled = true
cast_to = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 6.96431 )
shape = SubResource( 5 )

[node name="Raycasts" type="Node2D" parent="."]
visible = false
position = Vector2( 1, 5 )

[node name="FloorL" type="RayCast2D" parent="Raycasts"]
position = Vector2( -1, 9 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 524288

[node name="FloorR" type="RayCast2D" parent="Raycasts"]
position = Vector2( 1, 9 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 524288

[node name="FloorD" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 524288

[node name="ExplosionEmitter" parent="." instance=ExtResource( 1 )]
position = Vector2( -9, -5 )
type_weights = {
"1": 1,
"big_1": 0,
"big_2": 0,
"smoke_1": 0,
"smoke_2": 0
}

[node name="EmissionArea" parent="ExplosionEmitter" index="0"]
shape = SubResource( 6 )

[node name="AnimatedSprite" parent="ExplosionEmitter" index="1"]
visible = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 1, 5 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/walk = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Visual/Control/Spike" to="." method="_on_Spike_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="ExplosionEmitter"]
